# BKoAb

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  run.sh
frontend/: components.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: billing-years-card.tsx  layout.tsx  link-button.tsx  person-periods-editor.tsx
frontend/src/components/ui/: table.tsx
frontend/src/lib/: api.ts  billing-labels.ts  download.ts  utils.ts
frontend/src/pages/: apartment-detail.tsx  apartments.tsx  billing.tsx  dashboard.tsx  leases.tsx  properties.tsx  property-billing.tsx  property-detail.tsx  property-leases.tsx  settings.tsx
src/bkoab/: config.py  database.py  main.py  migrations.py
src/bkoab/api/: billing.py  dashboard.py  leases.py  properties.py
src/bkoab/models/: __init__.py
src/bkoab/schemas/: __init__.py
src/bkoab/services/: allocation.py  apartment_context.py  docx_export.py  docx_styles.py  pdf_export.py  person_periods.py  proration.py  settlement.py
tests/: test_api.py  test_calculation.py  test_docx_export.py  test_pdf_export.py
