[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bkoab"
version = "0.1.0"
description = "Betriebskostenabrechnung für WG-Vermietungen"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bkoab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
